--- a/Desenvolvimento Front-End/src/detalhePost.html
+++ b/Desenvolvimento Front-End/src/detalhePost.html
@@ -6,31 +6,82 @@
     <title>Detalhes da Postagem - SAC</title>
     <link href="./output.css" rel="stylesheet">
     <link href="./input.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8eab5b8649.js" crossorigin="anonymous"></script>
 </head>
-<body class="bg-amber-50 font-alexandria">
-    <nav class="bg-amber-50 px-6 py-2 text-black flex justify-center items-center">
-        <div class="flex items-center gap-15">
+<body class="bg-amber-50 font-alexandria text-textos">
+
+    <nav class="bg-amber-50 text-black flex justify-center items-center" id="menu-antigo">
+        <div class="flex items-center gap-15 px-6 py-2">
+            <a href="postagens.html" class=" hover:text-gray-800">Postagens</a>
+            <a href="duvidas.html" class=" hover:text-gray-800">Duvidas</a>
+            <span class="separator">|</span>
+            <a href="index.html" class="text-destaque font-alfa text-4xl">SAC</a>
+            <span class="separator">|</span>
+            <a href="ajuda.html" class=" hover:text-gray-800 ">Ajuda</a>
+            <a href="cadastro-1.html" class="py-1.25 px-2 rounded-lg bg-fundo1 hover:bg-destaque hover:text-white duration-250">Cadastre-se</a>
+        </div>
+    </nav>
+
+    <nav class="hidden bg-amber-50 text-black justify-center items-center" id="menu-novo">
+        <div class="flex items-center gap-15 py-2 relative">
             <a href="postagens.html" class="hover:text-gray-800">Postagens</a>
             <a href="duvidas.html" class="hover:text-gray-800">Duvidas</a>
             <span class="separator">|</span>
             <a href="index.html" class="text-destaque font-alfa text-4xl">SAC</a>
             <span class="separator">|</span>
             <a href="ajuda.html" class="hover:text-gray-800">Ajuda</a>
-            <div id="userTopBar" class="flex gap-3 items-center ml-8 hidden">
-                <div class="p-0 rounded-full overflow-hidden imagem bg-black w-8 h-8">
-                    <img id="profileImage" class="object-cover w-full h-full" src="" alt="Foto de Perfil">
+
+            <div id="logado">
+                <a href="#" id="userProfileLink">
+                    <div class="flex gap-3 cursor-pointer">
+                        <div class="p-0 rounded-full overflow-hidden imagem bg-black w-8 h-8">
+                            <img id="profileImage" class="object-cover w-full h-full" src="../img/pessoa sem foto.png" alt="Foto de Perfil">
+                        </div>
+                        <div class="flex flex-col">
+                            <span id="profileName">${nomeUsuario}</span>
+                        </div>
+                    </div>
+                </a>
+
+                <div class="menu-grande hidden absolute bg-white shadow-md mt-2 right-0 rounded-lg p-4 z-50" id="expandir">
+                    <ul>
+                        <li class="item py-2">
+                            <a href="perfil.html" class="flex items-center gap-2 hover:text-destaque">
+                                <i class="fa-solid fa-circle-user"></i>
+                                <span>Perfil</span>
+                            </a>
+                        </li>
+                        <li class="item py-2">
+                            <a href="criandoPost.html" class="flex items-center gap-2 hover:text-destaque">
+                                <i class="fa-solid fa-pen-to-square"></i>
+                                <span>Criar Postagem</span>
+                            </a>
+                        </li>
+                        <li class="item py-2">
+                            <a href="config-1.html" class="flex items-center gap-2 hover:text-destaque">
+                                <i class="fa-solid fa-gear"></i>
+                                <span>Configurações</span>
+                            </a>
+                        </li>
+                        <li class="item py-2">
+                            <a href="#" id="logoutBtn" class="flex items-center gap-2 hover:text-red-500">
+                                <i class="fa-solid fa-door-open"></i>
+                                <span>Sair da Conta</span>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-                <span id="profileName" class="font-bold"></span>
             </div>
         </div>
     </nav>
 
+    <!-- Conteúdo principal -->
     <main class="px-30 py-10">
         <div class="max-w-4xl mx-auto bg-white rounded-xl shadow-lg p-8">
             <div id="postDetails" class="space-y-6">
-                <!-- Content will be loaded dynamically -->
+                <!-- Conteúdo dinâmico da postagem será inserido aqui -->
             </div>
-            
+
             <div class="mt-8 flex justify-between">
                 <button onclick="history.back()" class="px-4 py-2 bg-gray-200 rounded-lg hover:bg-gray-300">
                     Voltar
@@ -42,6 +93,21 @@
         </div>
     </main>
 
+    <!-- Scripts -->
     <script src="javascript/detalhePost.js"></script>
+    <script>
+        // Preenche nome e foto do usuário logado no topo
+        document.addEventListener('DOMContentLoaded', function() {
+            const user = JSON.parse(localStorage.getItem('usuarioLogado'));
+            if (user && user.nome) {
+                document.getElementById('profileName').textContent = user.nome;
+                document.getElementById('userTopBar').classList.remove('hidden');
+                document.getElementById('profileImage').src = user.profileImage || '../img/default-profile.png';
+            }
+        });
+    </script>
+    <script src="javascript/menu.js"></script>
+
+
 </body>
 </html>
