--- a/Desenvolvimento Front-End/src/index-logado.html
+++ b/Desenvolvimento Front-End/src/index-logado.html
@@ -170,11 +170,22 @@
         </div>
         
     
-        <p class="text-sm mt-8">©Sistema de Apoio Comunitário (SAC)</p>
+        <p class="text-sm mt-8">©Sistema de Ajudas Comunitárias (SAC)</p>
     </footer>
 
+    <script src="javascript/index.js"></script>
+
+    <script>
+// Preenche nome e foto do usuário logado no topo
+document.addEventListener('DOMContentLoaded', function() {
+    const user = JSON.parse(localStorage.getItem('usuarioLogado'));
+    if (user && user.nome) {
+        document.getElementById('profileName').textContent = user.nome;
+        document.getElementById('userTopBar').classList.remove('hidden');
+        document.getElementById('profileImage').src = user.profileImage || '../img/default-profile.png';
+    }
+});
+</script>
+
 </body>
-
-<script src="javascript/index.js"></script>
-
 </html>
