--- a/Desenvolvimento Front-End/src/index.html
+++ b/Desenvolvimento Front-End/src/index.html
@@ -18,7 +18,7 @@
 </head>
 <body class="bg-amber-50 font-alexandria">
 
-    <nav class="bg-amber-50 text-black flex justify-center items-center" id="menu">
+    <nav class="bg-amber-50 text-black flex justify-center items-center" id="menu-antigo">
         <div class="flex items-center gap-15 px-6 py-2">
             <a href="postagens.html" class=" hover:text-gray-800">Postagens</a>
             <a href="duvidas.html" class=" hover:text-gray-800">Duvidas</a>
@@ -27,13 +27,6 @@
             <span class="separator">|</span>
             <a href="ajuda.html" class=" hover:text-gray-800 ">Ajuda</a>
             <a href="cadastro-1.html" class="py-1.25 px-2 rounded-lg bg-fundo1 hover:bg-destaque hover:text-white duration-250">Cadastre-se</a>
-            <!-- Usuário logado -->
-            <div id="userTopBar" class="flex gap-3 items-center ml-8 hidden">
-                <div class="p-0 rounded-full overflow-hidden imagem bg-black w-8 h-8">
-                    <img id="profileImage" class="object-cover w-full h-full" src="" alt="Foto de Perfil">
-                </div>
-                <span id="profileName" class="font-bold"></span>
-            </div>
         </div>
     </nav> 
 
@@ -169,21 +162,13 @@
         </div>
         
     
-        <p class="text-sm mt-8">©Sistema de Apoio Comunitário (SAC)</p>
+        <p class="text-sm mt-8">©Sistema de Ajudas Comunitárias (SAC)</p>
     </footer>
 
 </body>
 
 <script src="javascript/index.js"></script>
-<script>
-// Preenche nome e foto do usuário logado no topo
-document.addEventListener('DOMContentLoaded', function() {
-    const user = JSON.parse(localStorage.getItem('usuarioLogado'));
-    if (user && user.nome) {
-        document.getElementById('profileName').textContent = user.nome;
-        document.getElementById('userTopBar').classList.remove('hidden');
-        document.getElementById('profileImage').src = user.profileImage || '../img/default-profile.png';
-    }
-});
-</script>
+
+<script src="menu.js"></script>
+
 </html>
